deploy/pymano-mle-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pymano-mle-service
  labels:
    app: pymano-mle-web
spec:
  type: ClusterIP
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: pymano-mle-web
