deploy/pymano-mle-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pymano-mle-ingress
spec:
  defaultBackend:
    service:
      name: pymano-mle-service
      port:
        number: 8000
